<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>MainWidget</class>
 <widget class="QWidget" name="MainWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>504</width>
    <height>487</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>点考刷卡系统</string>
  </property>
  <property name="styleSheet">
   <string notr="true">* {
	
}
.MainWidget {

}

.ContainerWidget {
	background: white;
}

.TitleLabel {
	border: none;
	color: #333;
	background: rgb(238,240,243);
	/*background-image: url(:/icon/bg-2.png);*/
	text-align: left;
	icon-size: 27px 20px;
	padding-left: 5px;
	min-height: 30px;
	max-height: 30px;
	font-weight: normal;
}
#settingLabel {
	qproperty-icon: url(:/icon/icon01.png);
}
#personLabel {
	qproperty-icon: url(:/icon/icon02.png);
}
#statisticLabel {
	qproperty-icon: url(:/icon/icon03.png);
}

.IconLabel {
	border: none;
	background: white;
	text-align: left;
	icon-size: 27px 20px;
	padding-left: 1px;
	min-height: 27px;
	max-height: 27px;
}
#siteLabel {
	qproperty-icon: url(:/icon/zhukao.png);
}
#periodUnitLabel {
	qproperty-icon: url(:/icon/kaoqi.png);
}
#roomLabel {
	qproperty-icon: url(:/icon/kaodian.png);
}

#sideWidget,
#statisticWidget {
	min-width: 176px;
	max-width: 176px;
}

#infoLabel {
	color: darkgreen;
	background: white;
	padding: 10px 10px;
	border-top: 1px solid #EEE;
	text-align: center;
	font-size: 16px;
	min-height: 100px;
}

#infoLabel[error=true] {
	/*border: 2px dashed rgb(205,0,0);*/
	color: red;
}

#pictureLabel {
	background: url(:/icon/person.png);
}

.PersonInfoLabel {
	border: none;
	border-bottom: 1px solid lightgray;
}

.QComboBox {
	color: black;
	background: white;
	border: 1px solid lightgray;
	height: 20px;
}

.QComboBox:drop-down {
	width: 10px;
	height: 10px;
	border: 0px solid gray;
	subcontrol-origin: margin;
	subcontrol-position: right center;
	margin-right: 5px;
}

.QComboBox::down-arrow {
	image: url(:/icon/arrow-down.png);
}
.QComboBox::down-arrow:on {
	top: 1px;
	left: 1px;
}
.QLineEdit {
	height: 20px;
	border: 1px solid lightgray;
}
.QPushButton {
	border: 0px solid 9c41cc;
	color: white;
	min-width: 70px;
	min-height: 30px;
	background: rgb(46,62,79);
	padding-left: 5px;
	padding-right: 5px;
	border-radius: 0px;
}
.QPushButton:hover {
	color: #DDD;
}
.QPushButton:pressed {
	color: #BBB;
}

#cameraWidget {
	border-left: 1px solid #EEE;
}

#placeholderLabel, #previewLabel {
	border: 1px solid #EEE;
	margin-left: 2px;
	margin-right: 2px;
}

#captureButton {
	margin-left: 0px;
	margin-right: 0px;
}

#cameraWidget {
	border-bottom-right-radius: 4px;
}

#bottomWidget {
	background: white;
}</string>
  </property>
  <layout class="QGridLayout" name="gridLayout">
   <property name="leftMargin">
    <number>0</number>
   </property>
   <property name="topMargin">
    <number>0</number>
   </property>
   <property name="rightMargin">
    <number>0</number>
   </property>
   <property name="bottomMargin">
    <number>0</number>
   </property>
   <property name="spacing">
    <number>0</number>
   </property>
   <item row="0" column="0">
    <widget class="QWidget" name="personWidget" native="true">
     <property name="class" stdset="0">
      <string>ContainerWidget</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_3">
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <widget class="QPushButton" name="personLabel">
        <property name="text">
         <string>学员身份证</string>
        </property>
        <property name="flat">
         <bool>true</bool>
        </property>
        <property name="class" stdset="0">
         <string>TitleLabel</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QWidget" name="widget_4" native="true">
        <layout class="QGridLayout" name="gridLayout_3">
         <property name="verticalSpacing">
          <number>10</number>
         </property>
         <item row="4" column="1">
          <widget class="QLabel" name="cardIdLabel">
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="8" column="1" colspan="2">
          <widget class="QLabel" name="validEndLabel">
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="0" column="1">
          <widget class="QLabel" name="nameLabel">
           <property name="sizePolicy">
            <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="0" column="2" rowspan="5">
          <widget class="QLabel" name="pictureLabel">
           <property name="minimumSize">
            <size>
             <width>102</width>
             <height>126</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
             <width>102</width>
             <height>126</height>
            </size>
           </property>
           <property name="text">
            <string/>
           </property>
          </widget>
         </item>
         <item row="8" column="0">
          <widget class="QLabel" name="label_24">
           <property name="text">
            <string>有效结束日期:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="2" column="0">
          <widget class="QLabel" name="label_16">
           <property name="text">
            <string>民族:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="4" column="0">
          <widget class="QLabel" name="label_21">
           <property name="text">
            <string>身份证号码:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="6" column="1" colspan="2">
          <widget class="QLabel" name="policeLabel">
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="2" column="1">
          <widget class="QLabel" name="nationalityLabel">
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="1" column="0">
          <widget class="QLabel" name="label_15">
           <property name="text">
            <string>性别:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="5" column="0">
          <widget class="QLabel" name="label_14">
           <property name="text">
            <string>住址:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
           </property>
          </widget>
         </item>
         <item row="5" column="1" colspan="2">
          <widget class="QLabel" name="addressLabel">
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="6" column="0">
          <widget class="QLabel" name="label_22">
           <property name="text">
            <string>签发机关:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
           </property>
          </widget>
         </item>
         <item row="3" column="0">
          <widget class="QLabel" name="label_17">
           <property name="text">
            <string>出生:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="3" column="1">
          <widget class="QLabel" name="birthdayLabel">
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="1" column="1">
          <widget class="QLabel" name="genderLabel">
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="0" column="0">
          <widget class="QLabel" name="label_11">
           <property name="text">
            <string>姓名:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="7" column="1" colspan="2">
          <widget class="QLabel" name="validStartLabel">
           <property name="text">
            <string/>
           </property>
           <property name="class" stdset="0">
            <string>PersonInfoLabel</string>
           </property>
          </widget>
         </item>
         <item row="7" column="0">
          <widget class="QLabel" name="label_23">
           <property name="text">
            <string>有效开始日期:</string>
           </property>
           <property name="alignment">
            <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
         <item row="9" column="1">
          <widget class="QRadioButton" name="startRadioButton">
           <property name="text">
            <string>入场</string>
           </property>
           <property name="checked">
            <bool>true</bool>
           </property>
          </widget>
         </item>
         <item row="9" column="2">
          <widget class="QRadioButton" name="endRadioButton">
           <property name="text">
            <string>退场</string>
           </property>
          </widget>
         </item>
        </layout>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
   <item row="1" column="0">
    <widget class="QLabel" name="infoLabel">
     <property name="sizePolicy">
      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
       <horstretch>0</horstretch>
       <verstretch>0</verstretch>
      </sizepolicy>
     </property>
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>121</height>
      </size>
     </property>
     <property name="maximumSize">
      <size>
       <width>500</width>
       <height>200</height>
      </size>
     </property>
     <property name="text">
      <string/>
     </property>
     <property name="alignment">
      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
     </property>
     <property name="wordWrap">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item row="0" column="1" rowspan="3">
    <widget class="QWidget" name="cameraWidget" native="true">
     <property name="minimumSize">
      <size>
       <width>150</width>
       <height>0</height>
      </size>
     </property>
     <property name="class" stdset="0">
      <string>ContainerWidget</string>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_4">
      <property name="leftMargin">
       <number>0</number>
      </property>
      <property name="topMargin">
       <number>0</number>
      </property>
      <property name="rightMargin">
       <number>0</number>
      </property>
      <property name="bottomMargin">
       <number>0</number>
      </property>
      <item>
       <widget class="QPushButton" name="cameraLabel">
        <property name="text">
         <string>摄像头</string>
        </property>
        <property name="flat">
         <bool>true</bool>
        </property>
        <property name="class" stdset="0">
         <string>TitleLabel</string>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="placeholderLabel">
        <property name="minimumSize">
         <size>
          <width>164</width>
          <height>90</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>160</width>
          <height>90</height>
         </size>
        </property>
        <property name="text">
         <string>摄像头</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QLabel" name="previewLabel">
        <property name="minimumSize">
         <size>
          <width>164</width>
          <height>90</height>
         </size>
        </property>
        <property name="maximumSize">
         <size>
          <width>164</width>
          <height>90</height>
         </size>
        </property>
        <property name="text">
         <string>拍照预览</string>
        </property>
        <property name="alignment">
         <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="captureButton">
        <property name="text">
         <string>拍照上传</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="verticalSpacer_2">
        <property name="orientation">
         <enum>Qt::Vertical</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>20</width>
          <height>40</height>
         </size>
        </property>
       </spacer>
      </item>
     </layout>
    </widget>
   </item>
   <item row="3" column="0" colspan="2">
    <widget class="QWidget" name="bottomWidget" native="true">
     <property name="minimumSize">
      <size>
       <width>0</width>
       <height>0</height>
      </size>
     </property>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QComboBox" name="schoolsComboBox">
        <property name="sizePolicy">
         <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="toggleReadButton">
        <property name="minimumSize">
         <size>
          <width>80</width>
          <height>30</height>
         </size>
        </property>
        <property name="text">
         <string>开始刷卡</string>
        </property>
        <property name="checkable">
         <bool>false</bool>
        </property>
        <property name="checked">
         <bool>false</bool>
        </property>
        <property name="flat">
         <bool>true</bool>
        </property>
       </widget>
      </item>
      <item>
       <widget class="QPushButton" name="manualSigninButton">
        <property name="minimumSize">
         <size>
          <width>80</width>
          <height>30</height>
         </size>
        </property>
        <property name="text">
         <string>手动签到</string>
        </property>
        <property name="checkable">
         <bool>false</bool>
        </property>
        <property name="checked">
         <bool>false</bool>
        </property>
        <property name="flat">
         <bool>true</bool>
        </property>
       </widget>
      </item>
     </layout>
    </widget>
   </item>
  </layout>
 </widget>
 <layoutdefault spacing="6" margin="11"/>
 <resources/>
 <connections/>
</ui>
